k8s/deployment/ui/simple-ui-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-ui-v2
  labels:
    app: simple-ui
    version: v2
spec:
  selector:
    matchLabels:
      app: simple-ui
      version: v2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: simple-ui
        version: v2
    spec:
      containers:
        - env:
            - name: API_URL
              value: tcp://gateway-svc.demo.svc.cluster.local:3000
          name: simple-ui
          image: registry.gitlab.com/hoanganhnguyen1994/ui-management:ui-management-v2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 150Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - containerPort: 80
