k8s/deployment/ui/simple-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-ui
  namespace: demo
  labels:
    app: simple-ui
spec:
  type: ClusterIP
  selector:
    app: simple-ui
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
