k8s/deployment/ui/simple-ui-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: simple-ui
  namespace: demo
spec:
  rules:
    - host: simple.ui
      http:
        paths:
          - path: "/"
            backend:
              serviceName: simple-ui
              servicePort: 80
