k8s/deployment/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: gateway-svc
spec:
  rules:
    - host: "simple.web"
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-svc
              servicePort: 80
